app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    version: 1.0.0
  name: trying-keda-deployment
  labels:
    app: trying-keda
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: trying-keda
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: trying-keda
    spec:
      containers:
      - image: trying-keda:1.0.0
        imagePullPolicy: IfNotPresent
        name: trying-keda
        ports:
        - containerPort: 3000
          protocol: TCP
        resources:
          limits:
            cpu: 300m
            memory: 1G
          requests:
            cpu: 200m
            memory: 500M
      securityContext: {}
      terminationGracePeriodSeconds: 30
