app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: trying-keda-service
  labels:
    app: trying-keda
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 3000
    protocol: TCP
    targetPort: 3000
  selector:
    app: trying-keda
  sessionAffinity: ClientIP
